# MatrixGeneratorCpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
doc/: cpp_libraries.tex  matrix_generation.tex
examples/: CMakeLists.txt  benchmarker.cpp  generator.cpp
examples/julia/: benchmarker.jl  generator.jl  plotter.jl
include/: libraries.hpp  util.hpp
include/benchmarker/: benchmarker.hpp
include/generator/: cblas_wrapper.hpp  generator.hpp  intermediate.hpp  lapack_wrapper.hpp  property.hpp  shape.hpp  types.hpp
include/generator/facades/: armadillo.hpp  blaze.hpp  eigen.hpp  facade.hpp
include/generator/properties/: constant.hpp  eye.hpp  filler.hpp  ones.hpp  orthogonal.hpp  properties.hpp  property_id.hpp  random.hpp  spd.hpp  zeros.hpp
include/interfaces/: libraries.hpp
include/traits/: armadillo.hpp  blaze.hpp  eigen.hpp  matrix.hpp
julia/Benchmarker.jl/src/: Benchmarker.jl  Plotter.jl  Results.jl
julia/Generator.jl/src/: Generator.jl  Properties.jl  Shape.jl  TypeMatcher.jl
julia/Generator.jl/src/generators/: Constant.jl  Orthogonal.jl  Random.jl  SPD.jl
julia/Generator.jl/tests/: band_types.jl  constants.jl  helpers.jl  orthogonal.jl  random.jl  runtests.jl  spd.jl  typematcher.jl
tests/: CMakeLists.txt
tests/generator/: CMakeLists.txt  constant.cpp  eye.cpp  ones.cpp  orthogonal.cpp  random.cpp  spd.cpp  test_utilities.hpp  test_utilities_armadillo.hpp  test_utilities_blaze.hpp  test_utilities_eigen.hpp  zeros.cpp
